0.02
 - Fix test requires.
 - Fix typo in test message.

0.01 2022-08-18T12:49:31+02:00
 - First version.