@@ -4,7 +4,7 @@ NAME
 SYNOPSIS
      use Check::Fork qw(check_fork $ERROR_MESSAGE);
 
-     my $ret = check_fork();
+     my $ret = check_fork($config_hr, $os);
      print $ERROR_MESSAGE."\n";
 
 DESCRIPTION
@@ -16,11 +16,17 @@ DESCRIPTION
 
 SUBROUTINES
   "check_fork"
-     my $ret = check_fork();
+     my $ret = check_fork($config_hr, $os);
 
-    Check possibility of forking functionality on system. Return value is 1
-    as possible fork() or 0 as not possible fork(). If return value is 0,
-    set $ERROR_MESSAGE variable.
+    Check possibility of forking functionality on system.
+
+    Variable $config_hr is primarily for testing and default is
+    "\%Config::Config".
+
+    Variable $os is primarily for testing and default is $^O.
+
+    Return value is 1 as possible fork() or 0 as not possible fork(). If
+    return value is 0, set $ERROR_MESSAGE variable.
 
     Returns 0/1.
 
