@@ -1,4 +1,5 @@
 0.02
+ - Improve doc for testing variables.
  - Fix test requires.
  - Fix typo in test message.
 
